Ajout fond étoilé animé + correction icône UI/UX

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="service-card featured" data-aos="fade-up" data-aos-delay="100">
                     <div class="featured-badge">POPULAIRE</div>
                     <div class="service-icon">
-                        <i class="fas fa-paint-brush"></i>
+                        <i class="fas fa-pen-nib"></i>
                         <div class="icon-glow"></div>
                     </div>
                     <h3>UI/UX Design</h3>
